# docker-coredns-sync

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NEW_STRUCTURE.md  README.md  REWRITE.md  TESTS.md  TODO.md  cover_core.html  cover_core.out  cover_event.html  cover_event.out  cover_registry.out  coverage.html  coverage.out  devcontainer.env  docker-compose.yaml  go.mod  go.sum  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: config.yaml  devcontainer.json  docker-compose.yaml  post-create.sh
.devcontainer/coredns/: Corefile
.github/: pull_request_template.md
.github/workflows/: awaiting-release.yaml  docker.yaml
cmd/docker-coredns-sync/: decommission.go  decommission_test.go  interface.go  root.go  root_test.go
deploy/: Dockerfile  entrypoint.sh
internal/app/: app.go  app_test.go
internal/config/: config.go  config_test.go  etcd_tls_test.go
internal/core/: container_event.go  docker_watcher.go  docker_watcher_impl.go  engine.go  engine_test.go  errors.go  errors_test.go  interface.go  labels.go  labels_test.go  mock_test.go  nested_maps.go  nested_maps_test.go  reconciliation.go  reconciliation_test.go  record_builder.go  record_builder_test.go  state.go  validation.go  validation_test.go
internal/dns/: a.go  cname.go  dns_record.go  record.go
internal/domain/: container_event.go  container_event_test.go  dns_record.go  dns_record_test.go  record_factory.go  record_factory_test.go  (+2 more)
src/: config.py  etcd.py  logger.py  main.py  record.py  redis.py  sync.py
(+63 files in other folders)
