[project]
name = "docker-coredns-sync"
version = "0.1.0"
description = "Sync Docker container DNS records to etcd/Redis for CoreDNS"
authors = [{ name = "StevenC4" }]
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"] 
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # Ignore long lines, optional

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true
mypy_path = "src"
ignore_missing_imports = true